# boilerplate-technical-documentation

./: .gitignore  .travis.yml  README.md  mkdocs.yml  pyproject.toml
.github/: README.md
docs/: index.md
