[tool.poetry]
name = "documentation"
version = "0.1.0"
description = "Boilerplate Technical Documentation"
authors = ["Nicholas Adamou <nicholas.adamou@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
mkdocs = "^1.4.2"
mkdocs-material = "8.5.10"
mkdocs-git-revision-date-localized-plugin = "^1.1.0"
mkdocs-include-markdown-plugin = "^3.9.1"
mkdocs-material-extensions = "^1.1.1"
mdformat-gfm = "^0.3.5"
mdformat-frontmatter = "^0.4.1"
mdformat-footnote = "^0.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
